[project]
name = "research-help-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Meher Bhaskar",email = "meherbhaskar.madiraju@gmail.com"}
]

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12,<4.0"
arxiv = "^1.4.8"
langchain = "^0.1.0"
langchain-community = "^0.0.13"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
transformers = "^4.36.2"
torch = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
