[project]
name = "research-help-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Meher Bhaskar",email = "meherbhaskar.madiraju@gmail.com"}
]

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12,<4.0"
arxiv = "^1.4.8"
langchain = "^0.1.0"
langchain-community = "^0.0.13"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
transformers = "^4.36.2"
torch = "^2.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pytest = "^7.4.3"
pre-commit = "^4.2.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
