[tool.poetry]
name = "arxiv-search-helper"
version = "0.1.0"
description = "A tool that searches arXiv for papers on a given topic, ranks them by relevance, and provides summaries"
authors = ["Meher Bhaskar <meherbhaskar.madiraju@gmail.com>"]
readme = "README.md"
repository = "https://github.com/meherbhaskar/arxiv_search_helper"
license = "MIT"
packages = [{include = "."}]
package-mode = true



[tool.poetry.dependencies]
python = ">=3.12,<4.0"
arxiv = "^1.4.8"
langchain = "^0.1.0"
langchain-community = "^0.0.13"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
transformers = "^4.36.2"
torch = "^2.1.2"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pytest = "^7.4.3"
pre-commit = "^4.2.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arxiv-search = "arxiv_search_helper.arxiv_search:main"
